# reona

./: .env.example  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  client.rs  main.rs  ui.rs
src/config/: env.rs
src/ui/: continents.rs  panel.rs
