[package]
name = "reona"
version = "1.0.0"
edition = "2024"

[dependencies]
config = "0.15.11"
crossterm = "0.29.0"
dotenvy = "0.15.7"
ratatui = "0.30.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
